--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -280,7 +280,7 @@
 		<value>기부함에 있는 기부금을 가져갑니다.</value>
 	</data>
 	<data name="a6_randomdonation_Description" xml:space="preserve">
-		<value>랜덤기부함에 기부를 합니다. 금액 입력 가능.(ex. 기부 1000), 랜덤 키가 자동생성됩니다. (1~10)</value>
+		<value>랜덤기부함에 기부를 합니다. 금액 입력 가능.(ex. 랜덤기부 1000), 랜덤 키가 자동생성됩니다. (1~10)</value>
 	</data>
 	<data name="a7_randomthanks_Description" xml:space="preserve">
 		<value>랜덤키를 생성하여 맞을 경우 랜덤기부함 기부금을 가져옵니다.</value>
