--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -313,10 +313,10 @@
 		<value>현재 채널을 채팅 불가능한 채널로 변경합니다.</value>
 	</data>
 	<data name="a1_battlejoin_Description" xml:space="preserve">
-		<value>전투에 참여합니다. 2명이 모여야 시작합니다.</value>
+		<value>전투에 참여합니다. 2명이 모여야 시작 가능합니다. 명령어로 숫자 입력 시 골드를 걸고 합니다.(ex. bj 1000)</value>
 	</data>
 	<data name="a2_battlestart_Description" xml:space="preserve">
-		<value>전투를 시작합니다.</value>
+		<value>전투를 시작합니다. 명령어로 턴 딜레이 시간 조절이 가능합니다. (ex. bs 1500)(1500 = 1.5초, 기본 0.7초)</value>
 	</data>
 	<data name="a3_battlereset_Description" xml:space="preserve">
 		<value>전투를 초기화 합니다.</value>
