--- a/DiscordBot/Resource/Localization.resx
+++ b/DiscordBot/Resource/Localization.resx
@@ -313,10 +313,10 @@ This has a lower priority than music added with play.</value>
 		<value>Make the current channel disable chatting.</value>
 	</data>
 	<data name="a1_battlejoin_Description" xml:space="preserve">
-		<value>join the battle. It starts with 2 people.</value>
+		<value>join the battle. It can start with 2 people. Bet gold when entering a number with a command. (ex. bj 1000)</value>
 	</data>
 	<data name="a2_battlestart_Description" xml:space="preserve">
-		<value>Let the battle begin.</value>
+		<value>Let the battle begin. Turn delay time can be adjusted by command. (ex. bs 1500) (1500 = 1.5 seconds, default 0.7 seconds)</value>
 	</data>
 	<data name="a3_battlereset_Description" xml:space="preserve">
 		<value>Reset the battle.</value>
