--- a/DiscordBot/Resource/Localization.ko.resx
+++ b/DiscordBot/Resource/Localization.ko.resx
@@ -325,7 +325,8 @@
 		<value>전투를 초기화 합니다.</value>
 	</data>
 	<data name="yachtjoin_Description" xml:space="preserve">
-		<value>야추 채널이라면 추에 입장합니다.</value>
+		<value>야추 채널이라면 야추게임에 입장합니다.</value>
+		<value>야추 채널이라면 야추게임에 입장합니다.</value>
 	</data>
 	<data name="yachtopen_Description" xml:space="preserve">
 		<value>야추 스래드 채널을 엽니다.</value>
